# cmake_tutorial

./: .clang-format  .clang-tidy  .projectile  CMakeLists.txt  Makefile
bench/: CMakeLists.txt  cache_locality.cpp  matrix_multiplication.cpp
src/: CMakeLists.txt  allocator.cpp  allocator.h  bench.cpp  entity.cpp  entity.h  main.cpp  pimpl.cpp  pimpl.h  templated.cpp  templated.h  unit.h
test/: CMakeLists.txt
